--- a/src/features/event/page/banner/banner.module.css
+++ b/src/features/event/page/banner/banner.module.css
@@ -17,8 +17,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #090909;
-  opacity: 0.3;
+  background-color: #000000;
+  opacity: 0.6;
 }
 
 .rightSide {
